# Responsive-Web-Portfolio-Sample-Web-Assembly

./: .gitignore  Cargo.toml  README.md  index.html  main.js  styles.css  tmp.rs
src/: app.rs  external.rs  index.rs  interop.rs  main.rs
src/components/: footer.rs  navbar.rs
src/routes/: about.rs  blog.rs  home.rs  mod.rs  portfolio.rs
