[package]
name = "portfolio-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
yew-router = "0.15.0"
yew_styles = { version="0.11", features = ["navbar"]}
wasm-bindgen = "0.2"
js-sys = "0.3"
yew-interop = {version = "0.3", features = ["script"]}
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]